Add tmpfs volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
             - "80:80"
         networks:
             - front
+        tmpfs:
+            - /run
+            - /tmp
 
 networks:
     front:
